--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "omtp-website-vite",
+  "homepage": "http://omtp-software.ohmytallest.productions",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,7 +8,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "react": "^19.0.0",
@@ -23,6 +26,7 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "gh-pages": "^6.3.0",
     "globals": "^15.15.0",
     "vite": "https://pkg.pr.new/vite@94a2d1f39956ea56386f4955f070a6ffb2a468e4"
   }
